--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ Jobs:
       - name: Run Feed Generator
         run: python feed.py
       - name: push repo
-        run |
+        run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
