--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@V3
+        uses: actions/checkout@v3
       - name: setup Python
         uses: actions/setup-python@v4
         with:
